--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@ nav{
     bottom: 0;
     height: 100vh;
     left: 0;
-    width: 280px;
+    width: 90px;
     overflow: hidden;
     background-color: #fff;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     transition: 1s;
 }
 
@@ -53,6 +54,7 @@ a{
     color: rgb(85, 83, 83);
     display: table;
     padding: 14px;
+    transition: 0.5s;
 }
 
 .nav-item{
@@ -60,4 +62,24 @@ a{
     top: 12px;
     margin-left: 12px;
 }
+
+
+nav .fa-solid{
+    position: relative;
+    width: 70px;
+    height: 40px;
+    top: 20px;
+    font-size: 20px;
+    text-align: center;
+}
+
+a:hover{
+    background: #eee;
+}
+
+a:hover i{
+    color: #000;
+}
+
+
 
