--- a/style.css
+++ b/style.css
@@ -81,5 +81,25 @@ a:hover i{
     color: #000;
 }
 
+.container{
+    display: flex;
+}
 
+.main{
+    position: relative;
+    padding: 20px;
+    width: 100%;
+}
 
+.main-top{
+    display: flex;
+    width: 100%;
+}
+
+.main-top i{
+    position: fixed;
+    right: 0;
+    margin: 10px 30px;
+    color: rgb(110,109,109);
+    cursor: pointer;
+}
